fix scroll on mobile and other fixes

--- a/src/styles/info_section.scss
+++ b/src/styles/info_section.scss
@@ -44,6 +44,28 @@
   justify-content: center;
 }
 
+.navigation--collapsed {
+  @include tablets {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100vh;
+    z-index: 2;
+    background-color: $color-black-background;
+  }
+}
+
+body:has(.navigation--collapsed) .navigation__list {
+  @include tablets {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .navigation__list {
   display: flex;
   justify-content: space-between;
@@ -56,29 +78,13 @@
   }
 }
 
-.navigation__list--collapsed {
-  @include tablets {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    background-color: $color-black-background;
-  }
-}
-
-body:has(.navigation__list--collapsed) .scroll-list__dot {
+body:has(.navigation--collapsed) .scroll-list__dot {
   @include tablets {
     display: none;
   }
 }
 
-body:has(.navigation__list--collapsed) {
+body:has(.navigation--collapsed) {
   overflow: hidden;
 }
 
@@ -104,10 +110,21 @@ body:has(.navigation__list--collapsed) {
   }
 }
 
+.info__wrapper {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100vh;
+}
+
 .info__description {
   display: flex;
   align-items: center;
-  margin-top: 23px;
   position: relative;
 
   @include tablets {
@@ -191,6 +208,8 @@ body:has(.navigation__list--collapsed) {
 }
 
 .info__icon {
+  min-width: 41px;
+  min-height: 41px;
   width: 52px;
   height: 52px;
 }
